--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
    "name": "tforster.com",
-   "version": "0.1.0",
+   "version": "2.0.0",
    "private": true,
    "scripts": {
       "start": "node app"
    },
    "dependencies": {
-      "express": "3.1.0",
-      "jade":"0.34.x",
+      "express": "4.0.x",
+      "ejs":"0.8.x",
+      "nconf":"0.6.x",
       "tumblr.js":"0.0.4", 
       "twitter-js-client":"0.0.x",
       "moves-api":"0.0.2",
