--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
    },
    "dependencies": {
       "express": "4.0.x",
+      "jade":"1.3.1",
       "ejs":"0.8.x",
       "nconf":"0.6.x",
       "tumblr.js":"0.0.4", 
