--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
    "version": "2.0.0",
    "private": true,
    "scripts": {
-      "start": "node app"
+      "start": "node server"
    },
    "dependencies": {
       "express": "4.0.x",
-      "jade":"1.3.1",
       "ejs":"0.8.x",
       "nconf":"0.6.x",
       "tumblr.js":"0.0.4", 
