--- a/package.json
+++ b/package.json
@@ -14,6 +14,15 @@
       "moves-api":"0.0.2",
       "cron": "1.0.1"
    },
+   "devDependencies": {
+      "grunt": "~0.4.2",
+      "grunt-contrib-jshint": "~0.6.3",
+      "grunt-contrib-nodeunit": "~0.2.0",
+      "grunt-contrib-uglify": "~0.4.0",
+      "grunt-contrib-cssmin": "^0.9.0",
+      "grunt-contrib-watch": "^0.6.1",
+      "grunt-cache-breaker": "^1.0.1"
+   },
    "repository": {
       "type": "git",
       "url": "https://github.com/tforster/tforster.com.git"
