--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,20 +5,10 @@
     "es6": true,
     "node": true
   },
+  "parser": "babel-eslint",
+  "extends": "eslint:recommended",
   "parserOptions": {
     "ecmaVersion": 2017,
-    "ecmaFeatures": {
-      "jsx": true
-    },
     "sourceType": "module"
-  },
-  "rules": {
-    "no-const-assign": "warn",
-    "no-this-before-super": "warn",
-    "no-undef": "warn",
-    "no-unreachable": "warn",
-    "no-unused-vars": "warn",
-    "constructor-super": "warn",
-    "valid-typeof": "warn"
   }
 }
