Cross browser bug fixes

--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "version": "3.1.0",
   "private": false,
   "scripts": {
-    "s3-server": "node ~/dev/tforster/s3-server/node_modules/s3rver/bin/s3rver.js -s -h 0.0.0.0 -p 4568 -d ~/dev/tforster/s3-server/data -i index.html -e app.html & gulp watch"
+    "dev": "node ~/dev/tforster/s3-server/node_modules/s3rver/bin/s3rver.js -s -h 0.0.0.0 -p 4568 -d ~/dev/tforster/s3-server/data -i index.html -e index.html & gulp watch",
+    "deploy": "gulp build --target stage && gulp tinypng --target stage && gulp deploy --target stage",
+    "test": "jest"
   },
   "dependencies": {
-    "gulp-babili": "^0.1.2",
     "marked": "^0.3.6"
   },
   "devDependencies": {
@@ -18,6 +19,7 @@
     "eslint": "3.6.0",
     "gulp": "^3.9.1",
     "gulp-awspublish": "^3.3.0",
+    "gulp-babili": "^0.1.4",
     "gulp-debug": "^3.1.0",
     "gulp-ejs": "^3.0.1",
     "gulp-htmlmin": "^3.0.0",
@@ -28,7 +30,9 @@
     "gulp-tinypng": "^1.0.2",
     "gulp-usemin": "^0.3.28",
     "gulp-util": "^3.0.8",
-    "gulp-watch": "^4.3.11"
+    "gulp-watch": "^4.3.11",
+    "jest": "^20.0.4",
+    "jest-fetch-mock": "^1.1.1"
   },
   "repository": "git+https://github.com/tforster/tforster.com.git",
   "author": "Troy Forster (http://tforster.com)",
@@ -41,5 +45,11 @@
     "Troy",
     "Forster"
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "jest": {
+    "automock": false,
+    "setupFiles": [
+      "./test/setupJest.js"
+    ]
+  }
 }
