--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "marked": "^0.3.6"
   },
   "devDependencies": {
+    "@11ty/eleventy": "^0.7.1",
     "aws-sdk": "^2.43.0",
     "babel-eslint": "^7.2.3",
     "concurrent-transform": "^1.0.0",
@@ -18,6 +19,7 @@
     "eslint": "3.6.0",
     "gulp": "^3.9.1",
     "gulp-awspublish": "^3.3.0",
+    "gulp-cli": "^2.0.1",
     "gulp-debug": "^3.1.0",
     "gulp-ejs": "^3.0.1",
     "gulp-htmlmin": "^3.0.0",
