--- a/package.json
+++ b/package.json
@@ -7,8 +7,15 @@
     "dev": "static-server dist"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.7.2",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-html": "^6.0.0",
+    "eslint-plugin-prettier": "^3.1.2",
     "handlebars": "^4.5.3",
-    "node-fetch": "^2.6.0"
+    "node-fetch": "^2.6.0",
+    "prettier": "^1.19.1",
+    "vinyl-fs": "^3.0.3"
   },
   "repository": "git+https://github.com/tforster/tforster.com.git",
   "author": "Troy Forster (http://tforster.com)",
@@ -22,5 +29,110 @@
     "Forster"
   ],
   "license": "MIT",
-  "dependencies": {}
+  "eslintConfig": {
+    "extends": [
+      "prettier"
+    ],
+    "parser": "babel-eslint",
+    "parserOptions": {
+      "ecmaVersion": 2020,
+      "ecmaFeatures": {
+        "impliedStrict": true,
+        "classes": true
+      }
+    },
+    "env": {
+      "browser": true,
+      "node": true
+    },
+    "rules": {
+      "no-debugger": 0,
+      "no-alert": 0,
+      "no-await-in-loop": 0,
+      "no-return-assign": [
+        "error",
+        "except-parens"
+      ],
+      "no-restricted-syntax": [
+        2,
+        "ForInStatement",
+        "LabeledStatement",
+        "WithStatement"
+      ],
+      "no-unused-vars": [
+        1,
+        {
+          "ignoreSiblings": true,
+          "argsIgnorePattern": "res|next|^err"
+        }
+      ],
+      "prefer-const": [
+        "error",
+        {
+          "destructuring": "all"
+        }
+      ],
+      "arrow-body-style": [
+        2,
+        "as-needed"
+      ],
+      "no-unused-expressions": [
+        2,
+        {
+          "allowTaggedTemplates": true
+        }
+      ],
+      "no-param-reassign": [
+        2,
+        {
+          "props": false
+        }
+      ],
+      "no-console": 0,
+      "import/prefer-default-export": 0,
+      "import": 0,
+      "func-names": 0,
+      "space-before-function-paren": 0,
+      "comma-dangle": 0,
+      "max-len": 0,
+      "import/extensions": 0,
+      "no-underscore-dangle": 0,
+      "consistent-return": 0,
+      "radix": 0,
+      "no-shadow": [
+        2,
+        {
+          "hoist": "all",
+          "allow": [
+            "resolve",
+            "reject",
+            "done",
+            "next",
+            "err",
+            "error"
+          ]
+        }
+      ],
+      "quotes": [
+        2,
+        "double",
+        {
+          "avoidEscape": true,
+          "allowTemplateLiterals": true
+        }
+      ],
+      "prettier/prettier": [
+        "error",
+        {
+          "trailingComma": "es5",
+          "singleQuote": false,
+          "printWidth": 132
+        }
+      ]
+    },
+    "plugins": [
+      "html",
+      "prettier"
+    ]
+  }
 }
