--- a/package.json
+++ b/package.json
@@ -12,9 +12,15 @@
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-html": "^6.0.0",
     "eslint-plugin-prettier": "^3.1.2",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-rev": "^9.0.0",
+    "gulp-terser": "^1.2.0",
+    "gulp-usemin": "^0.3.30",
     "handlebars": "^4.5.3",
     "node-fetch": "^2.6.0",
     "prettier": "^1.19.1",
+    "terser": "^4.4.3",
     "vinyl-fs": "^3.0.3"
   },
   "repository": "git+https://github.com/tforster/tforster.com.git",
