--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "static-server dist"
   },
   "devDependencies": {
+    "aws-sdk": "^2.594.0",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.2",
     "eslint-config-prettier": "^6.7.0",
@@ -18,9 +19,11 @@
     "gulp-terser": "^1.2.0",
     "gulp-usemin": "^0.3.30",
     "handlebars": "^4.5.3",
+    "jszip": "^3.2.2",
     "node-fetch": "^2.6.0",
     "prettier": "^1.19.1",
     "terser": "^4.4.3",
+    "vinyl": "^2.2.0",
     "vinyl-fs": "^3.0.3"
   },
   "repository": "git+https://github.com/tforster/tforster.com.git",
