--- a/src/package.json
+++ b/src/package.json
@@ -2,26 +2,26 @@
   "name": "www.tforster.com",
   "description": "The official website of Troy Forster",
   "version": "4.0.0",
-  "private": true,
-  "repository": "git+https://github.com/tforster/tforster.com.git",
-  "author": "Troy Forster (http://tforster.com)",
-  "bugs": {
-    "url": "https://github.com/tforster/tforster.com/issues"
+  "scripts": {
+    "debug": "node --inspect-brk=9229 ./node_modules/.bin/serverless offline"
   },
-  "homepage": "https://github.com/tforster/tforster.com#readme",
-  "keywords": [
-    "Troy",
-    "Forster"
-  ],
-  "devDependencies": {
-    "babel-eslint": "^10.0.3",
-    "eslint": "^6.7.2",
-    "eslint-config-prettier": "^6.7.0",
-    "eslint-plugin-html": "^6.0.0",
-    "eslint-plugin-prettier": "^3.1.2",
-    "prettier": "^1.19.1"
+  "dependencies": {
+    "aws-sdk": "^2.594.0",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-rev": "^9.0.0",
+    "gulp-terser": "^1.2.0",
+    "gulp-usemin": "^0.3.30",
+    "handlebars": "^4.5.3",
+    "jszip": "^3.2.2",
+    "node-fetch": "^2.6.0",
+    "serverless": "^1.60.4",
+    "serverless-dotenv-plugin": "^2.1.1",
+    "serverless-offline": "^5.12.1",
+    "terser": "^4.4.3",
+    "vinyl": "^2.2.0",
+    "vinyl-fs": "^3.0.3"
   },
-  "license": "MIT",
   "eslintConfig": {
     "extends": [
       "prettier"
