--- a/.pages.yml
+++ b/.pages.yml
@@ -14,7 +14,19 @@ content:
       - name: webProducerKey
         label: webProducerKey (template to use)
         options:
-          values: ["404", home, portfolio, hire-me, uses, simple]
+          values:
+            - value: "404"
+              label: "404"
+            - value: home
+              label: home
+            - value: portfolio
+              label: portfolio
+            - value: hire-me
+              label: hire-me
+            - value: uses
+              label: uses
+            - value: simple
+              label: simple
       - name: title
         label: The title of the home page to show in the browser tab
         type: string
@@ -49,7 +61,7 @@ content:
       - name: webProducerKey
         label: webProducerKey (template to use)
         options:
-          values: ["404", home, portfolio, hire-me, uses, simple]
+          values: ["404", "home", "portfolio", "hire-me", "uses", "simple "]
       - name: title
         label: The title of the home page to show in the browser tab
         type: string
