--- a/.pages.yml
+++ b/.pages.yml
@@ -31,6 +31,12 @@ content:
       - name: title
         label: The title of the home page to show in the browser tab
         type: string
+      - name: meta
+        type: object
+        fields:
+          - name: description
+            label: Description
+            type: string        
       - name: cover
         label: Cover
         type: image
