--- a/.pages.yml
+++ b/.pages.yml
@@ -42,7 +42,7 @@ content:
             type: string
           - name: ogImage
             label: og:image
-            type: string
+            type: image
           - name: ogUrl
             label: og:url
             type: string
@@ -106,7 +106,7 @@ content:
             type: string
           - name: ogImage
             label: og:image
-            type: string
+            type: image
           - name: ogUrl
             label: og:url
             type: string
