--- a/.pages.yml
+++ b/.pages.yml
@@ -119,6 +119,26 @@ content:
       - name: cover
         label: Cover
         type: image    
+      - name: inspiration
+        label: Inspiration
+        type: object
+        fields:
+          - name: heading
+            label: Heading
+            type: string
+          - name: content
+            label: Content
+            type: rich-text
+          - name: image
+            label: Image
+            type: image
+      - name: howIGotHere
+        label: How I got here
+        type: rich-text
+      - name: values
+        label: My Values & Beliefs
+        type: object
+          
 
   - name: services
     label: Services
@@ -172,6 +192,20 @@ content:
       - name: cover
         label: Cover
         type: image    
+  - name: valuesAndBeliefs
+    label: My Values & Beliefs
+    type: collection
+    path: cms/values
+    format: json
+    filename: "{year}-{month}-{day}-{primary}.json"
+    icon: box
+    fields:
+      - name: heading
+        label: Heading
+        type: string
+      - name: body
+        label: Body
+        type: rich-text
         
   - name: simple
     label: Simple pages
