Update .pages.yml (via Pages CMS)

--- a/.pages.yml
+++ b/.pages.yml
@@ -54,6 +54,9 @@ content:
       - name: cover
         label: Cover
         type: image
+      - name: introText
+        type: string
+        label: Intro Text
       - name: heading
         label: The page heading-1 if different than the page title
         type: string
