Update .pages.yml (via Pages CMS)

--- a/.pages.yml
+++ b/.pages.yml
@@ -18,6 +18,7 @@ content:
         options:
           values: ["404", "home", "portfolio", "hire-me", "uses", "simple"]
         default: home
+        
       - name: title
         label: The title to show in the browser tab
         type: string
@@ -27,6 +28,7 @@ content:
       - name: pageSubTitle
         label: The line to display immediately below the title on the page
         type: string
+        
       - name: meta
         type: object
         fields:
@@ -94,9 +96,17 @@ content:
         options:
           values: ["404", "home", "portfolio", "hire-me", "uses", "simple", "about"]
         default: about
+        
       - name: title
-        label: The title of the home page to show in the browser tab
+        label: The title to show in the browser tab
         type: string
+      - name: pageTitle
+        label: The title to display on the page
+        type: string
+      - name: pageSubTitle
+        label: The line to display immediately below the title on the page
+        type: string
+        
       - name: meta
         type: object
         fields:
