--- a/.pages.yml
+++ b/.pages.yml
@@ -211,6 +211,7 @@ content:
       - name: title
         label: The title of the home page to show in the browser tab
         type: string
+        
       - name: meta
         type: object
         fields:
@@ -258,7 +259,67 @@ content:
       - name: body
         label: Body
         type: rich-text
+  - name: projects
+    label: Projects
+    path: cms/projects.json
+    type: file
+    fields:
+      - name: uri
+        label: The unique page slug
+        type: string
+        default: /projects.html
+        pattern: ^\/[a-zA-Z0-9-/]+\.[a-z0-9]*$
+      - name: webProducerKey
+        label: webProducerKey (template to use)
+        type: select
+        options:
+          values: ["404", "home", "projects", "hire-me", "uses", "simple", "about"]
+        default: projects
+        
+      - name: title
+        label: The title to show in the browser tab
+        type: string
+      - name: pageTitle
+        label: The title to display on the page
+        type: string
+      - name: pageSubTitle
+        label: The line to display immediately below the title on the page
+        type: string
+      - name: cover
+        label: Cover
+        type: image
 
+      - name: meta
+        type: object
+        fields:
+          - name: description
+            label: Description
+            type: string
+          - name: robots
+            label: Robots
+            type: select
+            options:
+              values: ["index, follow", "noindex, nofollow", "noindex, follow", "index, nofollow"]
+            default: "index, follow"
+          - name: ogTitle
+            label: og:title
+            type: string
+          - name: ogDescription
+            label: og:description
+            type: string
+          - name: ogType
+            label: og:type
+            type: string
+          - name: ogImage
+            label: og:image
+            type: image
+          - name: ogUrl
+            label: og:url
+            type: string
+          - name: ogSiteName
+            label: og:site_name
+            type: string
+        
   - name: simple
     label: Simple pages
     type: collection
