Update cms/projects.json (via Pages CMS)

--- a/cms/projects.json
+++ b/cms/projects.json
@@ -1,8 +1,8 @@
 {
   "uri": "/projects.html",
   "webProducerKey": "projects",
-  "title": "Troy - Projects &amp; Case Studies",
-  "pageTitle": "Projects &amp; Case Studies",
+  "title": "Troy - Projects & Case Studies",
+  "pageTitle": "Projects & Case Studies",
   "pageSubTitle": "something here",
   "meta": {
     "robots": "index, follow"
