Update cms/projects.json (via Pages CMS)

--- a/cms/projects.json
+++ b/cms/projects.json
@@ -1,7 +1,7 @@
 {
   "uri": "/projects.html",
   "webProducerKey": "projects",
-  "title": "Troy - Projects & Case Studies",
+  "title": "Projects & Case Studies",
   "pageTitle": "Projects & Case Studies",
   "pageSubTitle": "something here",
   "meta": {
