--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,16 +5,23 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "Build.js",
+
+      "request": "launch",
+      "skipFiles": ["<node_internals>/**"],
+      "type": "node",
+
+      "envFile": "${workspaceFolder}/.env",
+
+      "program": "${workspaceFolder}/scripts/build.js"
+    },
+    {
       "name": "Debug",
       "program": "${workspaceFolder}/webproducer/index.js",
       "request": "launch",
       "runtimeVersion": "14",
-      "skipFiles": [
-        "<node_internals>/**"
-      ],
-      "runtimeArgs": [
-        "--preserve-symlinks"
-      ],
+      "skipFiles": ["<node_internals>/**"],
+      "runtimeArgs": ["--preserve-symlinks"],
       "env": {
         "AWS_PROFILE": "tforster"
       },
@@ -25,24 +32,11 @@
       "type": "pwa-node",
       "request": "launch",
       "name": "CLI",
-      "skipFiles": [
-        "<node_internals>/**"
-      ],
+      "skipFiles": ["<node_internals>/**"],
       "program": "${workspaceFolder}/webproducer/node_modules/@tforster/webproducer/src/index.js",
       "runtimeVersion": "14",
-      "runtimeArgs": [
-        "--preserve-symlinks"
-      ],
-      "args": [
-        "--src",
-        "./src",
-        "--dest",
-        "./dist",
-        "--data",
-        "./src/data/data.json",
-        "--transform",
-        "function(){//some func}"
-      ]
+      "runtimeArgs": ["--preserve-symlinks"],
+      "args": ["--src", "./src", "--dest", "./dist", "--data", "./src/data/data.json", "--transform", "function(){//some func}"]
     }
   ]
 }
